--- a/school-bus/pom.xml
+++ b/school-bus/pom.xml
@@ -43,6 +43,8 @@
         <mysql-connector-java.version>8.0.11</mysql-connector-java.version>
         <jwt.version>0.9.0</jwt.version>
         <!-- <hutool    .version>4.1.1</hutool.version> -->
+        <!--my        -->
+        <dubbo-spring.version>0.2.0</dubbo-spring.version>
     </properties>
 
     <dependencyManagement>
@@ -166,6 +168,12 @@
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
             </dependency> -->
+            <!--dubbo-spring-->
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>${dubbo-spring.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
