--- a/school-bus/pom.xml
+++ b/school-bus/pom.xml
@@ -14,6 +14,7 @@
         <module>guns-rest</module>
         <module>guns-gateway</module>
         <module>guns-api</module>
+        <module>guns-user</module>
         <!-- <module>guns-generator</module> -->
     </modules>
 
