--- a/school-bus/guns-gateway/pom.xml
+++ b/school-bus/guns-gateway/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>guns-api</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.spring4all</groupId>
+            <artifactId>swagger-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
