--- a/school-bus/pom.xml
+++ b/school-bus/pom.xml
@@ -39,7 +39,7 @@
         <zxing.version>3.2.1</zxing.version>
         <druid.version>1.1.10</druid.version>
         <!-- <beetl.version>2.8.5</beetl.version> -->
-        <swagger.version>2.9.2</swagger.version>
+<!--        <swagger.version>2.9.2</swagger.version>-->
         <commons-lang3.version>3.7</commons-lang3.version>
         <ehcache.core.version>2.6.11</ehcache.core.version>
         <mysql-connector-java.version>8.0.11</mysql-connector-java.version>
@@ -49,6 +49,7 @@
         <dubbo-spring.version>0.2.0</dubbo-spring.version>
         <lombok.version>1.18.8</lombok.version>
         <mapstruct.version>1.3.0.Final</mapstruct.version>
+        <swagger-starter.version>1.8.0.RELEASE</swagger-starter.version>
     </properties>
 
     <dependencyManagement>
@@ -142,16 +143,16 @@
                 <artifactId>beetl</artifactId>
                 <version>${beetl.version}</version>
             </dependency> -->
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>${swagger.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
-                <version>${swagger.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>io.springfox</groupId>-->
+<!--                <artifactId>springfox-swagger2</artifactId>-->
+<!--                <version>${swagger.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>io.springfox</groupId>-->
+<!--                <artifactId>springfox-swagger-ui</artifactId>-->
+<!--                <version>${swagger.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
@@ -196,6 +197,12 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
+            </dependency>
+            <!--swagger在线文档-->
+            <dependency>
+                <groupId>com.spring4all</groupId>
+                <artifactId>swagger-spring-boot-starter</artifactId>
+                <version>${swagger-starter.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
