--- a/school-bus/guns-gateway/src/main/resources/application.yml
+++ b/school-bus/guns-gateway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ jwt:
   expiration: 604800      #7天 单位:秒
   auth-path: auth         #认证请求的路径
   md5-key: randomKey      #md5加密混淆key
-  ignore-url: /user/register,/user/check
+  ignore-url: /user/register,/user/check,/swagger,/v2,/webjars
 server:
   port: 8080 #项目端口
 
@@ -46,3 +46,7 @@ dubbo:
   registry:
     protocol: zookeeper
     address: 39.108.93.119:2181
+
+
+swagger:
+  enable: true
