--- a/school-bus/pom.xml
+++ b/school-bus/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <!-- <module>guns-admin</module> -->
         <module>guns-core</module>
-        <module>guns-rest</module>
+<!--        <module>guns-rest</module>-->
         <module>guns-gateway</module>
         <module>guns-api</module>
         <module>guns-user</module>
