修改配置文件， 成功部署到实验室的主机上

--- a/school-bus/guns-user/src/main/resources/application.yml
+++ b/school-bus/guns-user/src/main/resources/application.yml
@@ -19,9 +19,9 @@ mybatis-plus:
 spring:
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306/school_bus?serverTimeZone=UTC&useSSL=false
+      url: jdbc:mysql://39.108.93.119:3306/school_bus?serverTimeZone=UTC&useSSL=false
       username: root
-      password: 123
+      password: mai
       filters: log4j,wall,mergeStat
 
 logging:
