--- a/school-bus/guns-gateway/src/main/resources/application.yml
+++ b/school-bus/guns-gateway/src/main/resources/application.yml
@@ -10,7 +10,7 @@ jwt:
   md5-key: randomKey      #md5加密混淆key
   ignore-url: /user/register,/user/check,/swagger,/v2,/webjars
 server:
-  port: 8080 #项目端口
+  port: 8087 #项目端口
 
 mybatis-plus:
   mapper-locations: classpath*:com/stylefeng/guns/rest/**/mapping/*.xml
@@ -29,9 +29,9 @@ mybatis-plus:
 spring:
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306/school_bus?serverTimeZone=UTC&useSSL=false
+      url: jdbc:mysql://39.108.93.119:3306/school_bus?serverTimeZone=UTC&useSSL=false
       username: root
-      password: 123
+      password: mai
       filters: log4j,wall,mergeStat
 
 logging:
