UserController.java 添加解释

--- a/school-bus/guns-api/pom.xml
+++ b/school-bus/guns-api/pom.xml
@@ -28,6 +28,11 @@
             <groupId>com.stylefeng</groupId>
             <artifactId>guns-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.spring4all</groupId>
+            <artifactId>swagger-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
