--- a/school-bus/pom.xml
+++ b/school-bus/pom.xml
@@ -15,6 +15,7 @@
         <module>guns-gateway</module>
         <module>guns-api</module>
         <module>guns-user</module>
+        <module>guns-bus</module>
         <!-- <module>guns-generator</module> -->
     </modules>
 
