--- a/school-bus/guns-core/src/main/resources/default-config.properties
+++ b/school-bus/guns-core/src/main/resources/default-config.properties
@@ -8,12 +8,12 @@ spring.aop.proxy-target-class=true
 ###################### mybatis-plus\u9ED8\u8BA4\u914D\u7F6E #######################
 mybatis-plus.mapper-locations=classpath*:com/stylefeng/guns/**/mapping/*.xml
 # 0:\u6570\u636E\u5E93ID\u81EA\u589E   1:\u7528\u6237\u8F93\u5165id  2:\u5168\u5C40\u552F\u4E00id(IdWorker)  3:\u5168\u5C40\u552F\u4E00ID(uuid)
-mybatis-plus.global-config.id-type=0
-mybatis-plus.global-config.db-column-underline=false
-mybatis-plus.global-config.refresh-mapper=true
-mybatis-plus.global-config.logic-delete-value=0
-mybatis-plus.global-config.logic-not-delete-value=1
-mybatis-plus.global-config.sql-injector=com.baomidou.mybatisplus.mapper.LogicSqlInjector
+#mybatis-plus.global-config.id-type=0
+#mybatis-plus.global-config.db-column-underline=false
+#mybatis-plus.global-config.refresh-mapper=true
+#mybatis-plus.global-config.logic-delete-value=0
+#mybatis-plus.global-config.logic-not-delete-value=1
+#mybatis-plus.global-config.sql-injector=com.baomidou.mybatisplus.mapper.LogicSqlInjector
 mybatis-plus.configuration.map-underscore-to-camel-case=false
 #\u914D\u7F6E\u7684\u7F13\u5B58\u7684\u5168\u5C40\u5F00\u5173
 mybatis-plus.configuration.cache-enabled=true
