--- a/school-bus/guns-core/src/main/resources/default-config.properties
+++ b/school-bus/guns-core/src/main/resources/default-config.properties
@@ -22,7 +22,7 @@ mybatis-plus.configuration.lazyLoadingEnabled=true
 # \u5F00\u542F\u7684\u8BDD\uFF0C\u5EF6\u65F6\u52A0\u8F7D\u4E00\u4E2A\u5C5E\u6027\u65F6\u4F1A\u52A0\u8F7D\u8BE5\u5BF9\u8C61\u5168\u90E8\u5C5E\u6027\uFF0C\u5426\u5219\u6309\u9700\u52A0\u8F7D\u5C5E\u6027
 mybatis-plus.configuration.multipleResultSetsEnabled=true
 # \u6253\u5370sql\u8BED\u53E5,\u8C03\u8BD5\u7528
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 
 ########################## beetl\u9ED8\u8BA4\u914D\u7F6E ###########################
