配置druid数据源

--- a/school-bus/guns-bus/src/main/resources/application.yml
+++ b/school-bus/guns-bus/src/main/resources/application.yml
@@ -5,16 +5,11 @@ server:
 mybatis-plus:
   mapper-locations: classpath*:com/stylefeng/guns/rest/**/mapping/*.xml
   typeAliasesPackage: com.stylefeng.guns.rest.common.persistence.model
-#  global-config:
-#    id-type: 0  #0:数据库ID自增   1:用户输入id  2:全局唯一id(IdWorker)  3:全局唯一ID(uuid)
-#    db-column-underline: false
-#    refresh-mapper: true
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: true #配置的缓存的全局开关
     lazyLoadingEnabled: true #延时加载的开关
     multipleResultSetsEnabled: true #开启的话，延时加载一个属性时会加载该对象全部属性，否则按需加载属性
-
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #打印sql语句,调试用
 
 spring:
@@ -23,8 +18,24 @@ spring:
       url: jdbc:mysql://39.108.93.119:3306/school_bus?serverTimeZone=UTC&useSSL=false&characterEncoding=UTF-8
       username: root
       password: mai
-      filters: log4j,wall,mergeStat
-
+      type: com.alibaba.druid.pool.DruidDataSource
+      druid:
+        initial-size: 5
+        max-active: 20
+        min-idle: 5
+        max-wait: 3000
+        timeBetweenEvictionRunsMillis: 60000
+        pool-prepared-statements: false
+        maxPoolPreparedStatementPerConnectionSize: 20
+        filters: stat,wall,slf4j
+        connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
+        web-stat-filter:
+          enabled: true
+          url-pattern: "/*"
+          exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*"
+        stat-view-servlet:
+          login-username: admin
+          login-password: 123
 logging:
   level.root: info
   level.com.stylefeng: debug
