--- a/school-bus/guns-gateway/src/main/resources/application.yml
+++ b/school-bus/guns-gateway/src/main/resources/application.yml
@@ -8,19 +8,10 @@ jwt:
   expiration: 604800      #7天 单位:秒
   auth-path: auth         #认证请求的路径
   md5-key: randomKey      #md5加密混淆key
-  ignore-url: /user/register,/user/check,/swagger,/v2,/webjars,/seats,/bus,/file
+  ignore-url: /user/register,/user/check,/swagger,/v2,/webjars,/seats,/bus,/file,/druid
 server:
   port: 8087 #项目端口
 
-mybatis-plus:
-  mapper-locations: classpath*:com/stylefeng/guns/rest/**/mapping/*.xml
-  typeAliasesPackage: com.stylefeng.guns.rest.common.persistence.model
-  configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: true #配置的缓存的全局开关
-    lazyLoadingEnabled: true #延时加载的开关
-    multipleResultSetsEnabled: true #开启的话，延时加载一个属性时会加载该对象全部属性，否则按需加载属性
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #打印sql语句,调试用
 
 spring:
   datasource:
@@ -29,6 +20,7 @@ spring:
       username: root
       password: mai
       filters: log4j,wall,mergeStat
+      type: com.alibaba.druid.pool.DruidDataSource
   mvc:
     static-path-pattern: /**
 
