引入spring-redis jar包

--- a/school-bus/guns-core/pom.xml
+++ b/school-bus/guns-core/pom.xml
@@ -98,6 +98,12 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
