--- a/school-bus/guns-gateway/src/main/resources/application.yml
+++ b/school-bus/guns-gateway/src/main/resources/application.yml
@@ -23,7 +23,17 @@ spring:
       type: com.alibaba.druid.pool.DruidDataSource
   mvc:
     static-path-pattern: /**
-
+  redis:
+    database: 0
+    host: 39.108.93.119
+    port: 6179
+    password: 123
+    timeout: 5000ms
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
 logging:
   level.root: info
   level.com.stylefeng: debug
