--- a/school-bus/pom.xml
+++ b/school-bus/pom.xml
@@ -50,6 +50,7 @@
         <mapstruct.version>1.3.0.Final</mapstruct.version>
         <swagger-starter.version>1.8.0.RELEASE</swagger-starter.version>
         <spring-redis.version>2.2.2.RELEASE</spring-redis.version>
+        <rocketMQ.version>4.6.0</rocketMQ.version>
     </properties>
 
     <dependencyManagement>
@@ -171,6 +172,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>${spring-redis.version}</version>
+            </dependency>
+            <!--rocketMQ-->
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client</artifactId>
+                <version>${rocketMQ.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
