--- a/school-bus/guns-user/src/main/resources/application.yml
+++ b/school-bus/guns-user/src/main/resources/application.yml
@@ -64,3 +64,9 @@ dubbo:
     address: 39.108.93.119:2181
   protocol:
     port: 20880
+
+apache:
+  rocketmq:
+    consumer:
+      pushConsumer: school-bus
+    namesrvAddr: 39.108.93.119:9876
