--- a/school-bus/guns-core/pom.xml
+++ b/school-bus/guns-core/pom.xml
@@ -94,7 +94,7 @@
         <!--     rocketmq   -->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-client</artifactId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
