--- a/school-bus/pom.xml
+++ b/school-bus/pom.xml
@@ -42,7 +42,7 @@
         <mapstruct.version>1.3.0.Final</mapstruct.version>
         <swagger-starter.version>1.8.0.RELEASE</swagger-starter.version>
         <spring-redis.version>2.2.2.RELEASE</spring-redis.version>
-        <rocketMQ.version>4.6.0</rocketMQ.version>
+        <rocketmq-spring.version>2.0.3</rocketmq-spring.version>
     </properties>
 
     <dependencyManagement>
@@ -146,10 +146,15 @@
                 <version>${spring-redis.version}</version>
             </dependency>
             <!--rocketMQ-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.rocketmq</groupId>-->
+<!--                <artifactId>rocketmq-client</artifactId>-->
+<!--                <version>${rocketMQ.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
-                <artifactId>rocketmq-client</artifactId>
-                <version>${rocketMQ.version}</version>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq-spring.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
