添加支付模块

--- a/school-bus/pom.xml
+++ b/school-bus/pom.xml
@@ -15,6 +15,7 @@
         <module>guns-user</module>
         <module>guns-bus</module>
         <module>guns-order</module>
+        <module>guns-pay</module>
     </modules>
 
     <parent>
