--- a/school-bus/guns-gateway/src/main/resources/application.yml
+++ b/school-bus/guns-gateway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ jwt:
   expiration: 604800      #7天 单位:秒
   auth-path: auth         #认证请求的路径
   md5-key: randomKey      #md5加密混淆key
-  ignore-url: /user/register,/user/check,/swagger,/v2,/webjars,/seats,/bus,/file,/druid,/pay
+  ignore-url: /user/register,/user/check,/swagger,/v2,/webjars,/seats,/bus,/file,/druid
 server:
   port: 8087 #项目端口
 
