--- a/school-bus/guns-gateway/src/main/resources/application.yml
+++ b/school-bus/guns-gateway/src/main/resources/application.yml
@@ -14,6 +14,8 @@ server:
 
 
 spring:
+  application:
+    name: gateway
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://39.108.93.119:3306/school_bus?serverTimeZone=UTC&useSSL=false&characterEncoding=UTF-8
@@ -34,6 +36,12 @@ spring:
         max-active: 8
         max-wait: -1
         max-idle: 8
+  cloud:
+    sentinel:
+      eager: true
+      transport:
+        port: 8092
+        dashboard: 39.108.93.119:8091
 logging:
   level.root: info
   level.com.stylefeng: debug
@@ -46,7 +54,6 @@ dubbo:
   registry:
     protocol: zookeeper
     address: 39.108.93.119:2181
-
 
 
 swagger:
