--- a/school-bus/guns-bus/src/main/resources/application.yml
+++ b/school-bus/guns-bus/src/main/resources/application.yml
@@ -61,6 +61,9 @@ dubbo:
     address: 39.108.93.119:2181
   protocol:
     port: 20882
+  metadata-report:
+    address: zookeeper://39.108.93.119:2181
+
 
 rocketmq:
   name-server: 39.108.93.119:9876
